classDiagram
    class AppUser {
        +string Username
        +string UserPassword
        +string UserRole
        +string Email
        +int UserID
    }

    class Tour {
        +string TourName
        +bool Visibility
        +AppUser UserID
        +int TourID
        +float tourLength
    }

    class Place {
        +string PlaceName
        +float Latitude
        +float Longitude
        +string Country
        +int LocationID
    }

    class Stage {
        +int TourID
        +int PlaceID
        +int StepNumber
        +int clusterNumber
        +int clusterHotelID | clé étrangère
    }

    AppUser -- Tour
    Tour -- Stage
    Place -- Stage